fix(tabs): adds rules for not showing a focus indicator on tap

--- a/components/tabs/index.css
+++ b/components/tabs/index.css
@@ -408,6 +408,12 @@ governing permissions and limitations under the License.
 		}
 	}
 
+	&:focus:not(:focus-visible) {
+		&::before {
+			border-color: transparent;
+		}
+	}  
+
 	&:focus,
 	&:focus-visible {
 		color: var(
